--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Metroui-web : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
-
+    <title>Metroui-web</title>
+    <!-- Mobile viewport optimized: h5bp.com/viewport -->
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="metroui-web : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
+    <meta name="keywords" content="metro, metroui, metro-ui, windows8, " />
+    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Metroui-web</title>
   </head>
 
   <body>
