--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="metroui-web : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
-    <meta name="keywords" content="metro, metroui, metro-ui, windows8, " />
+    <meta name="keywords" content="metro, metroui, metro-ui, windows8, css, html, framework, web framework" />
     <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
