--- a/index.html
+++ b/index.html
@@ -50,180 +50,183 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-   <header id="nav-bar" class="container">
-      <h1>Application Name</h1>
-      <a id="user-info" href="#">
-      <div class="user-info-block">
-         <h3>FirstName</h3>
-         <h4>LastName</h4>
-      </div>
-      <div class="user-info-block">
-         <img id="user-avatar" src="http://www.gravatar.com/avatar/6cc5a644d49a9bfe88bc0819ae7bdea6.png?s=32" alt="user" />
-      </div>
-   </a>
-</header>
-   
-   
-   <div class="container">
-   
-      <div  class="metro metro-theme-light">
-   
-         <div class="metro-sections">
-   
-            <div class="metro-section" id="section1">
-   
-               <a data-next="#section2" data-prior="#section1" href="#" class="next-section"></a>
-   
-               <h2>Dashboard</h2>
-   
-               <a class="tile bg-color-orange" href="./appbar-demo.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Desktop alt.png" />
-                  </div>
-                  <span class="tile-label">DEMO APP-BAR</span>
-               </a>
-   
-               <a class="tile tile-double bg-color-green" href="./table-simple.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Microsoft Store.png" />
-                  </div>
-                  <span class="tile-label">DEMO SIMPLE TABLE </span>
-               </a>
-   
-               <a class="tile tile-double bg-color-green" href="./table-filtered.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Microsoft Store.png" />
-                  </div>
-                  <span class="tile-label">DEMO TABLE FILTERED</span>
-               </a>
-   
-               <a class="tile bg-color-blueDark" href="./tiles-templates.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/metro-tiles.jpg" />
-                  </div>
-                  <span class="tile-label">TILE TEMPLATES</span>
-               </a>
-   
-               <div class="tile tile-double bg-color-blue">
-                  <div class="tile-content-main">
-                     <div style="padding: 10px;">
-                        <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/Notifications.png" />
-                        <div style="margin-left: 115px; margin-top: 10px">
-                           <p style="font-size: 36px; margin-top: 0px;">12</p>
-                           <p style="font-size: 18px; margin-top: 0px;">Documenti da approvare</p>
-                           <p style="font-size: 12px; margin-top: 5px">lorem ipsum</p>
-                        </div>
-                     </div>
-                  </div>
-                  <span class="tile-label">NOTIFICATIONS</span>
-               </div>
-   
-               <div class="tile tile-double tile-multi-content">
-                  <div class="tile-content-main">
-                     <div style="padding: 10px;">
-                        <img src="content/img/Sunny.png" style="height: 96px; margin-right: 20px" class="place-left"/>
-                        <div style="margin-left: 115px; margin-top: 10px">
-                           <p style="font-size: 36px; margin-top: 0px;">12&#186;</p>
-                           <p style="font-size: 18px; margin-top: 0px;">Milano, Italia</p>
-                           <p style="font-size: 12px; margin-top: 5px">Soleggiato</p>
-                        </div>
-                     </div>
-                     <span class="tile-label">Meteo</span>
-                  </div>
-                  <div class="tile-content-sub bg-color-blueDark">
-                     Ehi! What a surprise!
-                  </div>
-               </div>
-   
+   <header id="nav-bar" class="container-fluid">
+      <div class="row-fluid">
+         <div class="span12">
+            <h1>Application Name</h1>
+            <a id="user-info" class="pull-right" href="#">
+            <div class="user-info-block">
+               <h3>FirstName</h3>
+               <h4>LastName</h4>
             </div>
-   
-            <div class="metro-section" id="section2">
-   
-               <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
-   
-               <h2>Bootstrap Metro</h2>
-   
-               <a class="tile tile-double bg-color-blue" href="./bootstrap-scaffolding.html">
-                  <div class="tile-content-main">
-                     <div style="padding: 10px;">
-                        <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/My Apps.png" />
-                        <div style="margin-left: 115px; margin-top: 10px">
-                           <p style="font-size: 18px; margin-top: 0px;">Grid system</p>
-                           <p style="font-size: 18px; margin-top: 0px;">Layouts</p>
-                           <p style="font-size: 18px; margin-top: 5px">Responsive design</p>
-                        </div>
-                     </div>
-                  </div>
-                  <span class="tile-label"><strong>SCAFFOLDING</strong></span>
-               </a>
-   
-               <a class="tile tile-double bg-color-blue" href="./bootstrap-base-css.html">
-                  <div class="tile-content-main">
-                     <div style="padding: 10px;">
-                        <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/Coding app.png" />
-                        <div style="margin-left: 115px; margin-top: 10px">
-                           <p style="font-size: 18px; margin-top: 0px;">Typography</p>
-                           <p style="font-size: 18px; margin-top: 0px;">Tables</p>
-                           <p style="font-size: 18px; margin-top: 5px">Forms &amp; Buttons</p>
-                        </div>
-                     </div>
-                  </div>
-                  <span class="tile-label"><strong>BASE CSS</strong></span>
-               </a>
-   
-               <a class="tile bg-color-orange" href="./bootstrap-components.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/RegEdit.png" />
-                  </div>
-                  <span class="tile-label"><strong>COMPONENTS</strong></span>
-               </a>
-   
-               <a class="tile bg-color-orange" href="./bootstrap-javascript.html">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Devices.png" />
-                  </div>
-                  <span class="tile-label"><strong>JAVASCRIPT</strong></span>
-               </a>
-   
+            <div class="user-info-block">
+               <img id="user-avatar" src="http://www.gravatar.com/avatar/6cc5a644d49a9bfe88bc0819ae7bdea6.png?s=32" alt="user" />
             </div>
+         </a>
+      </div>
+      </div>
+   </header>
    
-            <div class="metro-section" id="section3">
-               <h2>Category 3</h2>
-               <div class="tile tile-double bg-color-blue">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Live%20SkyDrive.png" />
+   
+   <div class="container-fluid">
+      <div class="row-fluid">
+         <div class="metro span12">
+            <div class="metro-sections">
+   
+               <div class="metro-section" id="section1">
+   
+                  <a data-next="#section2" data-prior="#section1" href="#" class="next-section"></a>
+   
+                  <h2>Dashboard</h2>
+   
+                  <a class="tile bg-color-orange" href="./appbar-demo.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Desktop alt.png" />
+                     </div>
+                     <span class="tile-label">DEMO APP-BAR</span>
+                  </a>
+   
+                  <a class="tile tile-double bg-color-green" href="./table-simple.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Microsoft Store.png" />
+                     </div>
+                     <span class="tile-label">DEMO SIMPLE TABLE </span>
+                  </a>
+   
+                  <a class="tile tile-double bg-color-green" href="./table-filtered.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Microsoft Store.png" />
+                     </div>
+                     <span class="tile-label">DEMO TABLE FILTERED</span>
+                  </a>
+   
+                  <a class="tile bg-color-blueDark" href="./tiles-templates.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/metro-tiles.jpg" />
+                     </div>
+                     <span class="tile-label">TILE TEMPLATES</span>
+                  </a>
+   
+                  <div class="tile tile-double bg-color-blue">
+                     <div class="tile-content-main">
+                        <div style="padding: 10px;">
+                           <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/Notifications.png" />
+                           <div style="margin-left: 115px; margin-top: 10px">
+                              <p style="font-size: 36px; margin-top: 0px;">12</p>
+                              <p style="font-size: 18px; margin-top: 0px;">Documenti da approvare</p>
+                              <p style="font-size: 12px; margin-top: 5px">lorem ipsum</p>
+                           </div>
+                        </div>
+                     </div>
+                     <span class="tile-label">NOTIFICATIONS</span>
                   </div>
-                  <span class="tile-label">Live SkyDrive</span>
-               </div>
-               <div class="tile bg-color-blueDark">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Bluetooth.png" />
+   
+                  <div class="tile tile-double tile-multi-content">
+                     <div class="tile-content-main">
+                        <div style="padding: 10px;">
+                           <img src="content/img/Sunny.png" style="height: 96px; margin-right: 20px" class="place-left"/>
+                           <div style="margin-left: 115px; margin-top: 10px">
+                              <p style="font-size: 36px; margin-top: 0px;">12&#186;</p>
+                              <p style="font-size: 18px; margin-top: 0px;">Milano, Italia</p>
+                              <p style="font-size: 12px; margin-top: 5px">Soleggiato</p>
+                           </div>
+                        </div>
+                        <span class="tile-label">Meteo</span>
+                     </div>
+                     <div class="tile-content-sub bg-color-blueDark">
+                        Ehi! What a surprise!
+                     </div>
                   </div>
-                  <span class="tile-label">Bluetooth</span>
+   
                </div>
-               <div class="tile bg-color-red">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Control%20Panel.png" />
+   
+               <div class="metro-section" id="section2">
+   
+                  <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
+   
+                  <h2>Bootstrap Metro</h2>
+   
+                  <a class="tile tile-double bg-color-blue" href="./bootstrap-scaffolding.html">
+                     <div class="tile-content-main">
+                        <div style="padding: 10px;">
+                           <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/My Apps.png" />
+                           <div style="margin-left: 115px; margin-top: 10px">
+                              <p style="font-size: 18px; margin-top: 0px;">Grid system</p>
+                              <p style="font-size: 18px; margin-top: 0px;">Layouts</p>
+                              <p style="font-size: 18px; margin-top: 5px">Responsive design</p>
+                           </div>
+                        </div>
+                     </div>
+                     <span class="tile-label"><strong>SCAFFOLDING</strong></span>
+                  </a>
+   
+                  <a class="tile tile-double bg-color-blue" href="./bootstrap-base-css.html">
+                     <div class="tile-content-main">
+                        <div style="padding: 10px;">
+                           <img class="place-left" style="height: 96px; margin-right: 20px" src="content/img/Coding app.png" />
+                           <div style="margin-left: 115px; margin-top: 10px">
+                              <p style="font-size: 18px; margin-top: 0px;">Typography</p>
+                              <p style="font-size: 18px; margin-top: 0px;">Tables</p>
+                              <p style="font-size: 18px; margin-top: 5px">Forms &amp; Buttons</p>
+                           </div>
+                        </div>
+                     </div>
+                     <span class="tile-label"><strong>BASE CSS</strong></span>
+                  </a>
+   
+                  <a class="tile bg-color-orange" href="./bootstrap-components.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/RegEdit.png" />
+                     </div>
+                     <span class="tile-label"><strong>COMPONENTS</strong></span>
+                  </a>
+   
+                  <a class="tile bg-color-orange" href="./bootstrap-javascript.html">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Devices.png" />
+                     </div>
+                     <span class="tile-label"><strong>JAVASCRIPT</strong></span>
+                  </a>
+   
+               </div>
+   
+               <div class="metro-section" id="section3">
+                  <h2>Category 3</h2>
+                  <div class="tile tile-double bg-color-blue">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Live%20SkyDrive.png" />
+                     </div>
+                     <span class="tile-label">Live SkyDrive</span>
                   </div>
-                  <span class="tile-label">Control Panel</span>
-               </div>
-               <div class="tile bg-color-green">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Signal.png" />
+                  <div class="tile bg-color-blueDark">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Bluetooth.png" />
+                     </div>
+                     <span class="tile-label">Bluetooth</span>
                   </div>
-                  <span class="tile-label">WiFi Settings</span>
-               </div>
-               <div class="tile bg-color-yellow">
-                  <div class="tile-icon-large">
-                     <img src="content/img/Computer%20alt%202.png" />
+                  <div class="tile bg-color-red">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Control%20Panel.png" />
+                     </div>
+                     <span class="tile-label">Control Panel</span>
                   </div>
-                  <span class="tile-label">My Computer</span>
+                  <div class="tile bg-color-green">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Signal.png" />
+                     </div>
+                     <span class="tile-label">WiFi Settings</span>
+                  </div>
+                  <div class="tile bg-color-yellow">
+                     <div class="tile-icon-large">
+                        <img src="content/img/Computer%20alt%202.png" />
+                     </div>
+                     <span class="tile-label">My Computer</span>
+                  </div>
                </div>
+   
             </div>
          </div>
-   
       </div>
-   
    </div>
    
    
