Uploading latest version.
latest changes. Using Google WebFonts (OpenSans) and IcoMoon icon font.
Various fixes.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
    <meta name="description" content=""/>
    <meta name="author" content=""/>
 
+   <!-- remove or comment this line if you want to use the local fonts -->
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap-responsive.css">
    <link rel="stylesheet" type="text/css" href="content/css/metro-ui.css">
    <link rel="stylesheet" type="text/css" href="content/css/metro-tiles.css">
    <link rel="stylesheet" type="text/css" href="content/css/charms.css">
-   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light-grey.css">
+   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
    <!--<link rel="stylesheet" type="text/css" href="content/css/metro-accent-colors.css">-->
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap-metro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="content/css/icomoon.css">
 
    <!--  these two css are to use only for documentation -->
    <link rel="stylesheet" type="text/css" href="content/css/demo.css">
@@ -60,7 +64,7 @@
                <h4>LastName</h4>
             </div>
             <div class="user-info-block">
-               <img id="user-avatar" src="http://www.gravatar.com/avatar/6cc5a644d49a9bfe88bc0819ae7bdea6.png?s=32" alt="user" />
+               <b class="icon-user"></b>
             </div>
          </a>
       </div>
