--- a/index.html
+++ b/index.html
@@ -37,16 +37,35 @@
         <p>Simple and complete web UI framework to create web apps with Windows 8 Metro user interface.
 It is based on Twitter Bootstrap and inspired by the Metro UI CSS by Sergey Pimenov.</p>
 
-<h3>Features</h3>
-
+<h2>Features</h2>
+<p>The framework permit to create web applications with the look&feel of the not-yet-released Windows 8 MetroUI style.<br/>
+Maybe not ideal for internet web sites, the MetroUI style can be adopted for modern intranet web sites.<br/>
+I've choosen to use as base the awesome Twitter Bootstrap framework, applying a set of customizations in pure css (but planning to do it in LESS for future version).</p>
 <p>The framework integrate and extend the work first done by other great people:</p>
 
 <ul>
-<li>HTML5 Boilerplate </li>
-<li>Twitter Bootstrap </li>
-<li>Metro UI CSS by Sergey Pimenov</li>
-</ul><p><strong>Beta version will be released soon, please be patient.</strong></p>
+<li><a href="http://html5boilerplate.com/">HTML5 Boilerplate</a></li>
+<li><a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a></li>
+<li><a href="http://metroui.org.ua/">Metro UI CSS by Sergey Pimenov</a></li>
+</ul>
 
+<h2>Versioning</h2>
+<h3>Latest Release: v0.8</h3>
+<ul>
+  <li>first official drop with:
+    <ul>
+      <li>hub with tiles</li>
+      <li>almost complete Bootstrap re-styled with MetroUI</li>
+    </ul>
+  </li>
+</ul>
+
+<h2>ToDo</h2>
+<ul>
+  <li>Complete the implementation of the tiles templates</li>
+</ul>
+
+<h2>Links</h2>
 <h3>Metro UI Guidelines</h3>
 
 <ul>
