--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <title>Metroui-web</title>
+    <title>MetroUI-Web</title>
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="metroui-web : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
@@ -34,8 +34,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Simple and complete web UI framework to create web apps with Windows 8 Metro user interface.
-It is based on Twitter Bootstrap and inspired by the Metro UI CSS by Sergey Pimenov.</p>
+        <p>MetroUI-Web provides simple and flexible HTML, CSS, and Javascript for web apps that wants to mimic the "Windows 8 MetroUI" style, without the need to run on Windows 8.
+It is built on top of Twitter Bootstrap and inspired by the Metro UI CSS by Sergey Pimenov.</p>
 
 <h2>Features</h2>
 <p>The framework permit to create web applications with the look&feel of the not-yet-released Windows 8 MetroUI style.<br/>
