--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ I've choosen to use as base the awesome Twitter Bootstrap framework, applying a 
 <li><a href="http://html5boilerplate.com/">HTML5 Boilerplate</a></li>
 <li><a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a></li>
 <li><a href="http://metroui.org.ua/">Metro UI CSS by Sergey Pimenov</a></li>
+<li><a href="http://keyamoon.com/icomoon/">IcoMoon icons</a></li>
 </ul>
 
 <h2>Versioning</h2>
