--- a/appbar-demo.html
+++ b/appbar-demo.html
@@ -60,7 +60,7 @@
       <div class="row-fluid">
          <div class="span8">
             <div id="header-container">
-               <a id="backbutton" class="win-backbutton" href="./index.html"></a>
+               <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
                <h5>BootMetro</h5>
                <div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
