--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="tile wide image">
                <img src="content/img/detail-headermenu.png" alt="headermenu" />
             </div>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+            <p>Implement the navigation in pure MetroUI style, use back-button and the header menu to provide simple ways to navigate to other pages.</p>
          </div>
       </div>
       <div class="row-fluid">
@@ -160,7 +160,7 @@
             <div class="tile wide image">
                <img src="content/img/detail-charms.png" alt="charms" />
             </div>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+            <p>Create charms panels to show contextual settings.</p>
          </div>
          <div class="span4">
             <h2>Font Icons</h2>
