--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
                <h2>Metro style web framework</h2>
                <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 MetroUI" style, without the need to run on Windows 8.</p>
                <p>
-                  <a href="https://github.com/aozora/bootmetro" class="btn btn-large btn-primary btn-success">
-                     Download Now
+                  <a href="https://github.com/aozora/bootmetro/zipball/master" class="btn btn-large btn-primary btn-success">
+                     Download Now <small>it's free</small>
                      <b class="icon-arrow-right-7"></b>
                   </a>
                   <small>Latest version: 0.5</small>
                </p>
             </div>
             <div class="span7">
-               <img id="hero-image" class="pull-right block" width="724" height="434" src="content/img/hero3.png" alt="hero">
+               <img id="hero-image" class="pull-right" width="724" height="434" src="content/img/hero3.png" alt="hero">
             </div>
          </header>
    
@@ -119,7 +119,7 @@
                   <span class="icon icon-twitter"/>
                </div>
                <div class="column-text">
-                  <div class="text-header3">Follow me on Twitter</div>
+                  <div class="text-header3">Follow on Twitter</div>
                </div>
             </a>
          </div>
@@ -144,14 +144,15 @@
             <div class="tile wide image">
                <img src="content/img/detail-appbar-1.png" alt="appbar" />
             </div>
-            <p>Use the ApplicationBar to show contextual icon action</p>
+            <p>Use the ApplicationBar to show contextual icon action.</p>
          </div>
          <div class="span4">
             <h2>Navigation</h2>
             <div class="tile wide image">
                <img src="content/img/detail-headermenu.png" alt="headermenu" />
             </div>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+            <p>iv>
+               <p>Implement the navigation in pure MetroUI style, use back-button and the header menu to provide simple ways to navigate to other pages.</p>
          </div>
       </div>
       <div class="row-fluid">
@@ -160,7 +161,7 @@
             <div class="tile wide image">
                <img src="content/img/detail-charms.png" alt="charms" />
             </div>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+            <p>Create charms panels to show contextual settings.</p>
          </div>
          <div class="span4">
             <h2>Font Icons</h2>
