Fix broken links

--- a/bootstrap-javascript.html
+++ b/bootstrap-javascript.html
@@ -133,25 +133,25 @@
          <div class="row-fluid">
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#modals">Modals</a></h3>
+               <h3><a href="./bootstrap-javascript.html#modals">Modals</a></h3>
                <p>A streamlined, but flexible, take on the traditional javascript modal plugin with only the minimum required functionality and smart defaults.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#dropdowns">Dropdowns</a></h3>
+               <h3><a href="./bootstrap-javascript.html#dropdowns">Dropdowns</a></h3>
                <p>Add dropdown menus to nearly anything in Bootstrap with this simple plugin. Bootstrap features full dropdown menu support on in the navbar, tabs, and pills.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#scrollspy">Scrollspy</a></h3>
+               <h3><a href="./bootstrap-javascript.html#scrollspy">Scrollspy</a></h3>
                <p>Use scrollspy to automatically update the links in your navbar to show the current active link based on scroll position.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#tabs">Togglable tabs</a></h3>
+               <h3><a href="./bootstrap-javascript.html#tabs">Togglable tabs</a></h3>
                <p>Use this plugin to make tabs and pills more useful by allowing them to toggle through tabbable panes of local content.</p>
              </label>
            </div>
@@ -159,26 +159,26 @@
          <div class="row-fluid">
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#tooltips">Tooltips</a></h3>
+               <h3><a href="./bootstrap-javascript.html#tooltips">Tooltips</a></h3>
                <p>A new take on the jQuery Tipsy plugin, Tooltips don't rely on images&mdash;they use CSS3 for animations and data-attributes for local title storage.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#popovers">Popovers</a> <small class="muted">*</small></h3>
+               <h3><a href="./bootstrap-javascript.html#popovers">Popovers</a> <small class="muted">*</small></h3>
                <p>Add small overlays of content, like those on the iPad, to any element for housing secondary information.</p>
                <p class="muted"><strong>*</strong> Requires <a href="#tooltips">Tooltips</a> to be included</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#alerts">Alert messages</a></h3>
+               <h3><a href="./bootstrap-javascript.html#alerts">Alert messages</a></h3>
                <p>The alert plugin is a tiny class for adding close functionality to alerts.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#buttons">Buttons</a></h3>
+               <h3><a href="./bootstrap-javascript.html#buttons">Buttons</a></h3>
                <p>Do more with buttons. Control button states or create groups of buttons for more components like toolbars.</p>
              </label>
            </div>
@@ -186,19 +186,19 @@
          <div class="row" style="margin-bottom: 9px;">
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#collapse">Collapse</a></h3>
+               <h3><a href="./bootstrap-javascript.html#collapse">Collapse</a></h3>
                <p>Get base styles and flexible support for collapsible components like accordions and navigation.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#carousel">Carousel</a></h3>
+               <h3><a href="./bootstrap-javascript.html#carousel">Carousel</a></h3>
                <p>Create a merry-go-round of any content you wish to provide an interactive slideshow of content.</p>
              </label>
            </div>
            <div class="span3">
              <label>
-               <h3><a href="./javascript.html#typeahead">Typeahead</a></h3>
+               <h3><a href="./bootstrap-javascript.html#typeahead">Typeahead</a></h3>
                <p>A basic, easily extended plugin for quickly creating elegant typeaheads with any form text input.</p>
              </label>
            </div>
