--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
    <meta charset="utf-8" />
    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-   <title>BootMetro</title>
-
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
+
+   <title>BootMetro</title>
 
    <meta name="robots" content="index, nofollow">
    <meta name="description" content="MetroUI-Web : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
@@ -46,7 +45,16 @@
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
    <script src="scripts/modernizr.min.js"></script>
 
-   <!--@RenderSection("head", false)-->
+   <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-3182578-6']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+   </script>
 </head>
 
 <body data-accent="blue">
@@ -75,15 +83,15 @@
                <h2>Metro style web framework</h2>
                <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 MetroUI" style, without the need to run on Windows 8.</p>
                <p>
-                  <a href="https://github.com/aozora/bootmetro" class="btn btn-large btn-primary btn-success">
-                     Download Now
+                  <a href="https://github.com/aozora/bootmetro/zipball/master" class="btn btn-large btn-primary btn-success">
+                     Download Now <small>it's free</small>
                      <b class="icon-arrow-right-7"></b>
                   </a>
                   <small>Latest version: 0.5</small>
                </p>
             </div>
             <div class="span7">
-               <img id="hero-image" class="pull-right block" width="724" height="434" src="content/img/hero3.png" alt="hero">
+               <img id="hero-image" class="pull-right" width="724" height="434" src="content/img/hero3.png" alt="hero">
             </div>
          </header>
    
@@ -119,7 +127,7 @@
                   <span class="icon icon-twitter"/>
                </div>
                <div class="column-text">
-                  <div class="text-header3">Follow me on Twitter</div>
+                  <div class="text-header3">Follow on Twitter</div>
                </div>
             </a>
          </div>
@@ -144,14 +152,15 @@
             <div class="tile wide image">
                <img src="content/img/detail-appbar-1.png" alt="appbar" />
             </div>
-            <p>Use the ApplicationBar to show contextual icon action</p>
+            <p>Use the ApplicationBar to show contextual icon action.</p>
          </div>
          <div class="span4">
             <h2>Navigation</h2>
             <div class="tile wide image">
                <img src="content/img/detail-headermenu.png" alt="headermenu" />
             </div>
-            <p>Implement the navigation in pure MetroUI style, use back-button and the header menu to provide simple ways to navigate to other pages.</p>
+            <p>iv>
+               <p>Implement the navigation in pure MetroUI style, use back-button and the header menu to provide simple ways to navigate to other pages.</p>
          </div>
       </div>
       <div class="row-fluid">
@@ -216,19 +225,6 @@
 
    <script type="text/javascript">
       $(".metro").metro();
-   </script>
-   <script type="text/javascript">
-
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-3182578-6']);
-     _gaq.push(['_trackPageview']);
-
-     (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-
    </script>
 </body>
 </html>
