Added ListView example (minimal)

--- a/hub.html
+++ b/hub.html
@@ -78,6 +78,7 @@
                   <ul class="dropdown-menu">
                   <li><a href="./hub.html">Hub</a></li>
                   <li><a href="./tiles-templates.html">Tile Templates</a></li>
+                  <li><a href="./listviews.html">ListViews</a></li>
                   <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
                   <li><a href="./table.html">Demo Table</a></li>
                   <li><a href="./icons.html">Icons</a></li>
@@ -142,11 +143,11 @@
                      <div class="app-label">Styled Table</div>
                   </a>
    
-                  <a class="tile app bg-color-purple" href="./listview.html">
+                  <a class="tile app bg-color-purple" href="./listviews.html">
                      <div class="image-wrapper">
                         <span class="icon icon-list-2"></span>
                      </div>
-                     <span class="app-label">[TODO] ListView</span>
+                     <span class="app-label">ListView</span>
                   </a>
    
                   <a class="tile app bg-color-red" href="./charms-demo.html">
@@ -304,6 +305,7 @@
    <script type="text/javascript" src="scripts/bootmetro.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
+   <script type="text/javascript" src="scripts/holder.js"></script>
 
    <script type="text/javascript">
       $(".metro").metro();
