--- a/wide-tiles-templates.html
+++ b/wide-tiles-templates.html
@@ -78,6 +78,7 @@
                   <ul class="dropdown-menu">
                   <li><a href="./hub.html">Hub</a></li>
                   <li><a href="./tiles-templates.html">Tile Templates</a></li>
+                  <li><a href="./listviews.html">ListViews</a></li>
                   <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
                   <li><a href="./table.html">Demo Table</a></li>
                   <li><a href="./icons.html">Icons</a></li>
@@ -569,6 +570,7 @@
    <script type="text/javascript" src="scripts/bootmetro.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
+   <script type="text/javascript" src="scripts/holder.js"></script>
 
    <script type="text/javascript">
       $(".metro").metro();
