--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
    <script type="text/javascript" src="scripts/bootmetro.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
+   <script type="text/javascript" src="scripts/holder.js"></script>
 
    <script type="text/javascript">
       $(".metro").metro();
