Added adsense ads. Changed the hero image.

--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
                      Download Now <small>it's free</small>
                      <b class="icon-arrow-right-7"></b>
                   </a>
+                  <br/>
                   <small>Latest version: 0.5</small>
                </p>
             </div>
             <div class="span7">
-               <img id="hero-image" class="pull-right" width="724" height="434" src="content/img/hero3.png" alt="hero">
+               <img id="hero-image" class="pull-right" width="724" height="434" src="content/img/hero4.png" alt="hero">
             </div>
          </header>
    
@@ -179,10 +180,29 @@
          </div>
       </div>
    </div>
-   
-   
-   
-   <div id="charms" class="win-ui-dark">
+
+  <div id="ads-tiles" class="container-fluid metro">
+     <div class="row-fluid">
+        <div class="span12">
+           <div id="ad-container" class="bg-color-blu">
+              <script type="text/javascript"><!--
+              google_ad_client = "ca-pub-4131516355996689";
+              /* BootMetro 728x90 */
+              google_ad_slot = "8605421585";
+              google_ad_width = 728;
+              google_ad_height = 90;
+              //-->
+              </script>
+              <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+           </div>
+        </div>
+
+     </div>
+
+  </div>
+
+
+  <div id="charms" class="win-ui-dark">
    
       <div id="theme-charms-section" class="charms-section">
          <div class="charms-header">
