--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          <div class="span4">
             <a class="tile wide imagetext bg-color-orange first" href="https://github.com/aozora/bootmetro">
                <div class="image-wrapper">
-                  <span class="icon icon-github"/>
+                  <span class="icon icon-github"></span>
                </div>
                <div class="column-text">
                   <div class="text-header3">View project on GitHub</div>
@@ -115,13 +115,14 @@
             <a class="tile wide imagetext bg-color-green middle" href="./hub.html">
                <div class="image-wrapper">
                   <!--<img src="content/img/metro-tiles.jpg" alt="demo"/>-->
-                  <span class="icon icon-grid-view"/>
+                  <span class="icon icon-grid-view"></span>
                </div>
                <div class="column-text">
                   <div class="text-header3">View the Demo online</div>
                </div>
             </a>
          </div>
+
          <div class="span4">
             <a class="tile wide imagetext bg-color-blue last" href="https://twitter.com/aozoralabs">
                <div class="image-wrapper">
@@ -132,6 +133,24 @@
                </div>
             </a>
          </div>
+         <!--<div class="span4">-->
+            <!--<a class="tile square text tilesquareblock bg-color-blue last" href="https://twitter.com/aozoralabs">-->
+               <!--<div class="text-big">-->
+                  <!--<span class="icon icon-twitter"></span>-->
+               <!--</div>-->
+               <!--<div class="text">-->
+                  <!--Follow me-->
+               <!--</div>-->
+            <!--</a>-->
+            <!--<a class="tile square text tilesquareblock bg-color-blue last" href="https://twitter.com/aozoralabs">-->
+               <!--<div class="text-big">-->
+                  <!--<span class="icon icon-google-plus"></span>-->
+               <!--</div>-->
+               <!--<div class="text">-->
+                  <!--Follow me-->
+               <!--</div>-->
+            <!--</a>-->
+         <!--</div>-->
       </div>
    </div>
    
