Fixed missed canges...

--- a/appbar-demo.html
+++ b/appbar-demo.html
@@ -132,7 +132,7 @@
             </div>
    <pre class="prettyprint linenums">
    &lt;button class="win-command"&gt;
-      &lt;span class="win-commandimage win-commandring"&gt;&amp;#x0021;&lt;/span&gt;
+      &lt;span class="win-commandimage win-commandring"&gt;&#x0021;&lt;/span&gt;
       &lt;span class="win-label"&gt;Home&lt;/span&gt;
    &lt;/button&gt;
    </pre>
