--- a/components.html
+++ b/components.html
@@ -2229,8 +2229,8 @@
                </div>
              </div>
    <pre class="prettyprint linenums">
-   &lt;div class="progress progress-striped active"&gt;
-     &lt;div class="bar" style="width: 40%;"&gt;&lt;/div&gt;
+   &lt;div class="progress progress-indeterminate"&gt;
+     &lt;div class="win-ring small"&gt;&lt;/div&gt;
    &lt;/div&gt;
    </pre>
    
