--- a/index.html
+++ b/index.html
@@ -62,18 +62,7 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-   <!--<header id="nav-bar" class="container-fluid">-->
-      <!--<div class="row-fluid">-->
-         <!--<div class="span12">-->
-            <!--<h1>BootMetro</h1>-->
-         <!--</div>-->
-      <!--</div>-->
-   <!--</header>-->
-   
-   <!--<h2>Create your hub</h2>-->
-   <!--<p></p>-->
-   
-   
+   <!--
    <div id="hero" class="container-fluid" xmlns="http://www.w3.org/1999/html">
       <div class="row-fluid">
    
@@ -88,7 +77,7 @@
                      <b class="icon-arrow-right-7"></b>
                   </a>
                   <br/>
-                  <small>Latest version: 0.6</small>
+                  <span class="label label-success">Latest version: 0.6</span>
                </p>
             </div>
             <div class="span7">
@@ -98,6 +87,35 @@
    
       </div>
    </div>
+   -->
+   <header id="hero" class="">
+   
+         <div class="jumbotron masthead">
+            <div class="container-fluid">
+               <div class="row-fluid">
+                  <div class="inner span5">
+                     <h1>BootMetro</h1>
+                     <h2>Metro style web framework</h2>
+                     <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 App Store" style, without the need to run on Windows 8.</p>
+                     <p>
+                        <a class="btn btn-large btn-primary" href="https://github.com/aozora/bootmetro/zipball/master">
+                           Download Now
+                           <i class="icon-arrow-right-7"></i>
+                        </a>
+                        <span>it's free</span>
+                        <br/>
+                        <span class="label label-success">Latest version: 0.6</span>
+                     </p>
+                  </div>
+                  <div class="span7">
+                     <img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">
+                  </div>
+               </div>
+            </div>
+         </div>
+   
+   </header>
+   
    
    <div id="home-tiles" class="container-fluid metro">
       <div class="row-fluid">
