Fixed css, added little responsive fix. Fixed Index

--- a/hub.html
+++ b/hub.html
@@ -57,7 +57,7 @@
    </script>
 </head>
 
-<body data-accent="blue">
+<body>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -177,7 +177,7 @@
    
                   <h2>Bootstrap Metro</h2>
    
-                  <a class="tile wide imagetext bg-color-blue" href="./bootstrap-scaffolding.html">
+                  <a class="tile wide imagetext bg-color-blue" href="./scaffolding.html">
                      <div class="image-wrapper">
                         <img src="content/img/My Apps.png" />
                      </div>
@@ -189,7 +189,7 @@
                      <span class="app-label">SCAFFOLDING</span>
                   </a>
    
-                  <a class="tile wide imagetext bg-color-blueDark" href="./bootstrap-base-css.html">
+                  <a class="tile wide imagetext bg-color-blueDark" href="./base-css.html">
                      <div class="image-wrapper">
                         <img src="content/img/Coding app.png" />
                      </div>
@@ -202,14 +202,14 @@
                      <span class="app-label">BASE CSS</span>
                   </a>
    
-                  <a class="tile app bg-color-orange" href="./bootstrap-components.html">
+                  <a class="tile app bg-color-orange" href="./components.html">
                      <div class="image-wrapper">
                         <img src="content/img/RegEdit.png" alt="" />
                      </div>
                      <span class="app-label">COMPONENTS</span>
                   </a>
    
-                  <a class="tile app bg-color-red" href="./bootstrap-javascript.html">
+                  <a class="tile app bg-color-red" href="./javascript.html">
                      <div class="image-wrapper">
                         <img src="content/img/Devices.png" alt="" />
                      </div>
