--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    </script>
 </head>
 
-<body data-accent="blue">
+<body>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -132,7 +132,6 @@
          <div class="span4">
             <a class="tile wide imagetext bg-color-green middle" href="./hub.html">
                <div class="image-wrapper">
-                  <!--<img src="content/img/metro-tiles.jpg" alt="demo"/>-->
                   <span class="icon icon-grid-view"/>
                </div>
                <div class="column-text">
@@ -164,7 +163,7 @@
                <img src="content/img/detail-hub.png" alt="hub" />
             </div>
             <p>Give more focus to your content. With a Metro style app you give users immediately focus on the primary infos, increasing the usability and reducing the distractions.</p>
-            <p>Use the same tile templates as defined for the original Windows 8 MetroUI.</p>
+            <!--<p>Use the same tile templates as defined for the original Windows 8 MetroUI.</p>-->
          </div>
          <div class="span4">
             <h2>Actions</h2>
@@ -196,7 +195,28 @@
             </div>
             <p>With the awesome <a href="http://keyamoon.com/icomoon">IcoMoon</a> font icon set, you can use hundreds of font icons with any color and any dimension.</p>
          </div>
+         <div class="span4">
+            <h2>Messages</h2>
+            <div class="tile wide image">
+               <img src="content/img/metro-messages.png" alt="icons" />
+            </div>
+            <p>Show messages, warning and errors like Windows 8 do.</p>
+         </div>
       </div>
+      <div class="row-fluid">
+         <div class="span4">
+            <h2>ListViews</h2>
+            <div class="tile wide image">
+               <img src="content/img/listviews.png" alt="charms" />
+            </div>
+            <p>Show selectable lists of elements.</p>
+         </div>
+         <div class="span4">
+         </div>
+         <div class="span4">
+         </div>
+      </div>
+   
    </div>
    
    
